2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Add support for turning off degenerate handling.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2002-04-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Replace type_list by args.

2002-03-20  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* defs.h: Clean up Fortran name handling.

2002-03-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* bloch.h: Increase portability.
	* camfr_wrap.cpp: Ditto.
	* expression.cpp: Ditto.
	* scatterer.h: Ditto.
	* waveguide.h: Ditto.

2002-03-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Remove unrequired casts.

2002-03-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* camfr_wrap.cpp: Add support for Section.
	* defs.h: Ditto.
	* defs.cpp: Ditto.

2002-03-06  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* scatterer.h: Bug fix for special scatterers.
	* scatterer.cpp: Ditto.

2002-02-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* mode.h: Add support for better sorting of Bloch modes.
	* waveguide.h: Ditto.
	* bloch.cpp: Ditto.

2002-02-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* infstack.cpp: Clean up.

2002-02-11  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* geometry.py: Add support for squares, fix bug.

2002-02-07  Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>

	* bloch.h: Add new GEV Bloch solver.
	* bloch.cpp: Ditto.
	* defs.h : Ditto.
	* defs.cpp : Ditto.
	* camfr_wrap.cpp: Ditto.

2002-02-07  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* infstack.h: New file.
	* infstack.cpp: Ditto.

2002-02-01  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* stack.cpp: Implement eps_at and mu_at.

2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* expression.h: Add support for slab matrix cache.
	* expression.cpp: Ditto.
	* interface.cpp: Ditto.
	* scatterer.h: Ditto.
	* scatterer.cpp: Ditto.
	* stack.cpp: Ditto.

2002-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
