@@ -1,5 +1,9 @@
 2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* scatterer.cpp: Find modes even when doing trivial scatterers.
+
+2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* defs.h: Add support for turning off degenerate handling.
 	* defs.cpp: Ditto.
 	* camfr_wrap.cpp: Ditto.
